--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -4,3 +4,14 @@
   vertical-align: bottom;
   max-width: 35%;
 }
+
+.CompanyLink {
+  text-decoration: none; 
+  color: rgb(255, 255, 255);
+}
+
+.CompanyLink:hover {
+  text-decoration: underline;
+  color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.25);
+}
