--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -29,8 +29,8 @@
 
 .IntroLink:hover {
     text-decoration: underline;
-    color: rgb(0, 0, 0);
-    background-color: rgb(12,129,250);
+    color: rgba(8, 45, 253, 0.661);
+    background-color: rgba(255, 255, 255);
 }
 
 .YoYoLink:hover {
